{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 114,
  "lineage": "ccbca980-454a-4ac3-00af-534bc61b706f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545575328670:internet-gateway/igw-05e789ad42b5d8dc9",
            "id": "igw-05e789ad42b5d8dc9",
            "owner_id": "545575328670",
            "tags": {
              "Name": "AIops-Cluster-igw"
            },
            "tags_all": {
              "Name": "AIops-Cluster-igw"
            },
            "vpc_id": "vpc-0dab8c0a585fb2c3a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545575328670:route-table/rtb-0365ff6b7045a0303",
            "id": "rtb-0365ff6b7045a0303",
            "owner_id": "545575328670",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e789ad42b5d8dc9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AIops-Cluster-rt"
            },
            "tags_all": {
              "Name": "AIops-Cluster-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dab8c0a585fb2c3a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba4f3b97bbb9df15",
            "route_table_id": "rtb-0365ff6b7045a0303",
            "subnet_id": "subnet-03ca89aa89f479873"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks",
            "aws_route_table.eks",
            "aws_subnet.eks",
            "aws_vpc.eks",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bd548d4b1b49459",
            "route_table_id": "rtb-0365ff6b7045a0303",
            "subnet_id": "subnet-03b9defdd69a9107c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks",
            "aws_route_table.eks",
            "aws_subnet.eks",
            "aws_vpc.eks",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043f96681b5bbb53d",
            "route_table_id": "rtb-0365ff6b7045a0303",
            "subnet_id": "subnet-07f82db4edfa7984c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks",
            "aws_route_table.eks",
            "aws_subnet.eks",
            "aws_vpc.eks",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545575328670:subnet/subnet-03ca89aa89f479873",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ca89aa89f479873",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "545575328670",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AIops-Cluster-subnet-0",
              "kubernetes.io/cluster/AIops-Cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "AIops-Cluster-subnet-0",
              "kubernetes.io/cluster/AIops-Cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dab8c0a585fb2c3a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545575328670:subnet/subnet-03b9defdd69a9107c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b9defdd69a9107c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "545575328670",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AIops-Cluster-subnet-1",
              "kubernetes.io/cluster/AIops-Cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "AIops-Cluster-subnet-1",
              "kubernetes.io/cluster/AIops-Cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dab8c0a585fb2c3a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545575328670:subnet/subnet-07f82db4edfa7984c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f82db4edfa7984c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "545575328670",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AIops-Cluster-subnet-2",
              "kubernetes.io/cluster/AIops-Cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "AIops-Cluster-subnet-2",
              "kubernetes.io/cluster/AIops-Cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dab8c0a585fb2c3a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545575328670:vpc/vpc-0dab8c0a585fb2c3a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-005f66765880fa342",
            "default_route_table_id": "rtb-05ab61a9541d045cb",
            "default_security_group_id": "sg-0ebe434b87d3db2a3",
            "dhcp_options_id": "dopt-0e24a77eaa9c07652",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dab8c0a585fb2c3a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ab61a9541d045cb",
            "owner_id": "545575328670",
            "tags": {
              "Name": "AIops-Cluster-vpc",
              "project": "zylkerkart"
            },
            "tags_all": {
              "Name": "AIops-Cluster-vpc",
              "project": "zylkerkart"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "zylkerkart",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "zylkerkart/zylkerkart-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/proxy-body-size": "150m",
                  "nginx.ingress.kubernetes.io/proxy-connect-timeout": "30",
                  "nginx.ingress.kubernetes.io/proxy-read-timeout": "60",
                  "nginx.ingress.kubernetes.io/proxy-send-timeout": "60"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "zylkerkart-ingress",
                "namespace": "zylkerkart",
                "resource_version": "2706",
                "uid": "ce8a09b0-20ca-4688-bf3d-51fdb7be6222"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "storefront",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "product-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8081
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/api/products",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "order-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8082
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/api/orders",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "order-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8082
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/api/cart",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "search-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8083
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/api/search",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "payment-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8084
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/api/payments",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "auth-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8085
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/api/auth",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "ad2777e349ae14ad1a66dea9815ce3f9-1328311778.us-east-2.elb.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "zylkerkart-ingress",
            "namespace": "zylkerkart"
          },
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_eks_node_group.default",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_ecr_read",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "aws_internet_gateway.eks",
            "aws_route_table.eks",
            "aws_route_table_association.eks",
            "aws_subnet.eks",
            "aws_vpc.eks",
            "azurerm_kubernetes_cluster.aks",
            "azurerm_resource_group.aks",
            "data.aws_availability_zones.available",
            "helm_release.ingress_nginx",
            "kubernetes_namespace.zylkerkart"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "purpose": "apm-monitoring"
                },
                "name": "monitoring",
                "resource_version": "1281",
                "uid": "878400ab-bfb2-4202-a9ee-21a18980160c"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "monitoring"
          },
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_eks_node_group.default",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_ecr_read",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "aws_internet_gateway.eks",
            "aws_route_table.eks",
            "aws_route_table_association.eks",
            "aws_subnet.eks",
            "aws_vpc.eks",
            "azurerm_kubernetes_cluster.aks",
            "azurerm_resource_group.aks",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "site24x7_labs",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "site24x7-labs",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/part-of": "site24x7-labs"
                },
                "name": "site24x7-labs",
                "resource_version": "2538",
                "uid": "f2fa4482-b447-4add-9a98-4408d15b6416"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "site24x7-labs"
          },
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_eks_node_group.default",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_ecr_read",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "aws_internet_gateway.eks",
            "aws_route_table.eks",
            "aws_route_table_association.eks",
            "aws_subnet.eks",
            "aws_vpc.eks",
            "azurerm_kubernetes_cluster.aks",
            "azurerm_resource_group.aks",
            "data.aws_availability_zones.available",
            "helm_release.ingress_nginx",
            "kubernetes_cluster_role.apm_agent_role",
            "kubernetes_cluster_role.site24x7",
            "kubernetes_cluster_role.site24x7_ksm",
            "kubernetes_cluster_role_binding.apm_agent_rolebinding",
            "kubernetes_cluster_role_binding.site24x7",
            "kubernetes_cluster_role_binding.site24x7_ksm",
            "kubernetes_config_map.apm_apps_config",
            "kubernetes_config_map.site24x7",
            "kubernetes_config_map.zylkerkart_config",
            "kubernetes_daemonset.go_apm_exporter",
            "kubernetes_daemonset.site24x7_agent",
            "kubernetes_deployment.auth_service",
            "kubernetes_deployment.mysql",
            "kubernetes_deployment.order_service",
            "kubernetes_deployment.payment_service",
            "kubernetes_deployment.product_service",
            "kubernetes_deployment.redis",
            "kubernetes_deployment.search_service",
            "kubernetes_deployment.site24x7_ksm",
            "kubernetes_deployment.storefront",
            "kubernetes_ingress_v1.zylkerkart",
            "kubernetes_namespace.monitoring",
            "kubernetes_namespace.zylkerkart",
            "kubernetes_persistent_volume_claim.mysql_pvc",
            "kubernetes_secret.site24x7_agent",
            "kubernetes_service.mysql",
            "kubernetes_service.redis",
            "kubernetes_service_account.apm_agent_sa",
            "kubernetes_service_account.site24x7",
            "kubernetes_service_account.site24x7_ksm",
            "terraform_data.k8s_ready",
            "terraform_data.mysql_pvc_finalizer_cleanup",
            "terraform_data.site24x7_env_setup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "zylkerkart",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "zylkerkart",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/part-of": "zylkerkart"
                },
                "name": "zylkerkart",
                "resource_version": "1280",
                "uid": "5d906f12-d469-4cbb-847a-a012f0386b54"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "zylkerkart"
          },
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_eks_node_group.default",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_ecr_read",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "aws_internet_gateway.eks",
            "aws_route_table.eks",
            "aws_route_table_association.eks",
            "aws_subnet.eks",
            "aws_vpc.eks",
            "azurerm_kubernetes_cluster.aks",
            "azurerm_resource_group.aks",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "auth_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "zylkerkart/auth-service",
            "metadata": [
              {
                "generation": 0,
                "name": "auth-service",
                "namespace": "zylkerkart",
                "resource_version": "1350",
                "uid": "e0cad8fd-5934-4433-a3f5-ee7f6c9c53c5"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.121.255",
                "cluster_ips": [
                  "172.20.121.255"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8085,
                    "protocol": "TCP",
                    "target_port": "8085"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "auth-service"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "auth-service",
            "namespace": "zylkerkart"
          },
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_eks_node_group.default",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_ecr_read",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "aws_internet_gateway.eks",
            "aws_route_table.eks",
            "aws_route_table_association.eks",
            "aws_subnet.eks",
            "aws_vpc.eks",
            "azurerm_kubernetes_cluster.aks",
            "azurerm_resource_group.aks",
            "data.aws_availability_zones.available",
            "kubernetes_namespace.zylkerkart"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "zylkerkart/mysql",
            "metadata": [
              {
                "generation": 0,
                "name": "mysql",
                "namespace": "zylkerkart",
                "resource_version": "1334",
                "uid": "d20e5540-ac63-4193-b67c-6f81698adb02"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "None",
                "cluster_ips": [
                  "None"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 3306,
                    "protocol": "TCP",
                    "target_port": "3306"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "mysql"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "mysql",
            "namespace": "zylkerkart"
          },
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_eks_node_group.default",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_ecr_read",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "aws_internet_gateway.eks",
            "aws_route_table.eks",
            "aws_route_table_association.eks",
            "aws_subnet.eks",
            "aws_vpc.eks",
            "azurerm_kubernetes_cluster.aks",
            "azurerm_resource_group.aks",
            "data.aws_availability_zones.available",
            "kubernetes_namespace.zylkerkart"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "order_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "zylkerkart/order-service",
            "metadata": [
              {
                "generation": 0,
                "name": "order-service",
                "namespace": "zylkerkart",
                "resource_version": "1305",
                "uid": "55c505de-5bdc-4608-b130-396be9a4a1d2"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.183.202",
                "cluster_ips": [
                  "172.20.183.202"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8082,
                    "protocol": "TCP",
                    "target_port": "8082"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "order-service"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "order-service",
            "namespace": "zylkerkart"
          },
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_eks_node_group.default",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_ecr_read",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "aws_internet_gateway.eks",
            "aws_route_table.eks",
            "aws_route_table_association.eks",
            "aws_subnet.eks",
            "aws_vpc.eks",
            "azurerm_kubernetes_cluster.aks",
            "azurerm_resource_group.aks",
            "data.aws_availability_zones.available",
            "kubernetes_namespace.zylkerkart"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "payment_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "zylkerkart/payment-service",
            "metadata": [
              {
                "generation": 0,
                "name": "payment-service",
                "namespace": "zylkerkart",
                "resource_version": "1302",
                "uid": "904036a6-3328-4c59-8dc6-be45c0a3ca14"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.166.202",
                "cluster_ips": [
                  "172.20.166.202"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8084,
                    "protocol": "TCP",
                    "target_port": "8084"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "payment-service"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "payment-service",
            "namespace": "zylkerkart"
          },
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_eks_node_group.default",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_ecr_read",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "aws_internet_gateway.eks",
            "aws_route_table.eks",
            "aws_route_table_association.eks",
            "aws_subnet.eks",
            "aws_vpc.eks",
            "azurerm_kubernetes_cluster.aks",
            "azurerm_resource_group.aks",
            "data.aws_availability_zones.available",
            "kubernetes_namespace.zylkerkart"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "product_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "zylkerkart/product-service",
            "metadata": [
              {
                "generation": 0,
                "name": "product-service",
                "namespace": "zylkerkart",
                "resource_version": "1341",
                "uid": "9a634adb-dee2-489c-a230-583bbaf0f913"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.246.150",
                "cluster_ips": [
                  "172.20.246.150"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8081,
                    "protocol": "TCP",
                    "target_port": "8081"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "product-service"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "product-service",
            "namespace": "zylkerkart"
          },
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_eks_node_group.default",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_ecr_read",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "aws_internet_gateway.eks",
            "aws_route_table.eks",
            "aws_route_table_association.eks",
            "aws_subnet.eks",
            "aws_vpc.eks",
            "azurerm_kubernetes_cluster.aks",
            "azurerm_resource_group.aks",
            "data.aws_availability_zones.available",
            "kubernetes_namespace.zylkerkart"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "zylkerkart/redis",
            "metadata": [
              {
                "generation": 0,
                "name": "redis",
                "namespace": "zylkerkart",
                "resource_version": "1344",
                "uid": "e5c33c56-2e60-4dcc-bcc3-89d320b34a1a"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.123.0",
                "cluster_ips": [
                  "172.20.123.0"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 6379,
                    "protocol": "TCP",
                    "target_port": "6379"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "redis"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "redis",
            "namespace": "zylkerkart"
          },
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_eks_node_group.default",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_ecr_read",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "aws_internet_gateway.eks",
            "aws_route_table.eks",
            "aws_route_table_association.eks",
            "aws_subnet.eks",
            "aws_vpc.eks",
            "azurerm_kubernetes_cluster.aks",
            "azurerm_resource_group.aks",
            "data.aws_availability_zones.available",
            "kubernetes_namespace.zylkerkart"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "search_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "zylkerkart/search-service",
            "metadata": [
              {
                "generation": 0,
                "name": "search-service",
                "namespace": "zylkerkart",
                "resource_version": "1308",
                "uid": "a74c24c4-f714-4276-b4a1-46699ba157d8"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.107.99",
                "cluster_ips": [
                  "172.20.107.99"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8083,
                    "protocol": "TCP",
                    "target_port": "8083"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "search-service"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "search-service",
            "namespace": "zylkerkart"
          },
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_eks_node_group.default",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_ecr_read",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "aws_internet_gateway.eks",
            "aws_route_table.eks",
            "aws_route_table_association.eks",
            "aws_subnet.eks",
            "aws_vpc.eks",
            "azurerm_kubernetes_cluster.aks",
            "azurerm_resource_group.aks",
            "data.aws_availability_zones.available",
            "kubernetes_namespace.zylkerkart"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "site24x7_ksm",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "id": "default/site24x7-kube-state-metrics",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "exporter",
                  "app.kubernetes.io/name": "site24x7-kube-state-metrics",
                  "app.kubernetes.io/version": "2.9.2"
                },
                "name": "site24x7-kube-state-metrics",
                "namespace": "default",
                "resource_version": "869",
                "uid": "afccbce9-c4e0-4f9a-8a1b-4c947d4abfac"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "None",
                "cluster_ips": [
                  "None"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http-metrics",
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "http-metrics"
                  },
                  {
                    "name": "telemetry",
                    "node_port": 0,
                    "port": 8081,
                    "protocol": "TCP",
                    "target_port": "telemetry"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "site24x7-kube-state-metrics"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "site24x7-kube-state-metrics",
            "namespace": "default"
          },
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_iam_role.eks_cluster",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_internet_gateway.eks",
            "aws_route_table.eks",
            "aws_route_table_association.eks",
            "aws_subnet.eks",
            "aws_vpc.eks",
            "azurerm_kubernetes_cluster.aks",
            "azurerm_resource_group.aks",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "storefront",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "zylkerkart/storefront",
            "metadata": [
              {
                "generation": 0,
                "name": "storefront",
                "namespace": "zylkerkart",
                "resource_version": "1384",
                "uid": "94a3360c-af4f-4c19-a577-a765ee55c965"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.246.246",
                "cluster_ips": [
                  "172.20.246.246"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 31118,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "storefront"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a94a3360caf4f4c19a577a765ee55c96-118489966.us-east-2.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "storefront",
            "namespace": "zylkerkart"
          },
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_eks_node_group.default",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_ecr_read",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_iam_role_policy_attachment.eks_worker_node_policy",
            "aws_internet_gateway.eks",
            "aws_route_table.eks",
            "aws_route_table_association.eks",
            "aws_subnet.eks",
            "aws_vpc.eks",
            "azurerm_kubernetes_cluster.aks",
            "azurerm_resource_group.aks",
            "data.aws_availability_zones.available",
            "kubernetes_namespace.zylkerkart"
          ]
        }
      ]
    }
  ]
}